# hermes-claude-bridge

./: .gitignore  README.md  hermes_claude_bridge.db  pyproject.toml
.github/workflows/: ci.yml  release.yml
.hermes/plans/: 2026-06-21_175000-hermes-claude-bridge-v2.md  2026-06-21_180000-hermes-claude-bridge-realtime-interactive.md  2026-06-21_190000-hermes-claude-bridge-v0.4.0.md  2026-06-21_200000-hermes-claude-bridge-v0.5.0.md  2026-06-21_201500-hermes-claude-bridge-v0.6.0.md
.skills/hermes-claude-bridge/: SKILL.md
examples/: basic_usage.py  hermes_skill_example.py
tests/: __init__.py  test_bridge.py  test_cli.py  test_cli_mcp_server.py  test_cli_server.py  test_cli_setup_mcp.py  test_cli_setup_plugin.py  test_client.py  test_client_list_sessions.py  test_context_builder.py  test_context_builder_limit.py  test_context_compressor.py  test_db_models.py  test_e2e.py  test_e2e_plugin_persistent.py  test_executor.py  test_executor_bare_mode.py  test_executor_model.py  test_hermes_adapter.py  test_hermes_plugin.py  test_hermes_plugin_env.py  test_interactive_claude.py  test_interactive_executor.py  test_interactive_questions.py  test_mcp_server.py  test_mcp_sessions.py  test_parser.py  test_parser_questions.py  test_schemas.py  test_server.py  test_server_history_limit.py  test_server_interactive.py  test_server_interactive_answer.py  test_server_list_sessions.py  test_server_sse_realtime.py  test_session_history_limit.py  test_session_manager.py  test_session_manager_list.py  test_session_manager_notify.py  test_setup_manager_mcp.py  (+2 more)
(+23 files in other folders)
